--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         <h3 class="textos subtitulos">
           Quantidade de emigrantes que morrem após chegarem no Brasil
         </h3>
-        <img class="graficos" src="Midias/grafico1.png" alt="gráfico" />
+        <img class="imagens" src="Midias/grafico1.png" alt="gráfico" />
         <h3 class="textos subtitulos">
           Porcentagem de emigrantes menores de idade
         </h3>
-        <img class="graficos" src="Midias/grafico2.jpg" alt="gráfico" />
+        <img class="imagens" src="Midias/grafico2.jpg" alt="gráfico" />
         <h3 class="textos subtitulos">
           Porcentagem dos emigrantes que chegam sem praticamente nenhum recurso
           no Brasil
         </h3>
-        <img class="graficos" src="Midias/grafico3.png" alt="gráfico" />
+        <img class="imagens" src="Midias/grafico3.png" alt="gráfico" />
         <h3 class="textos">
           Quantidade de refugiados que vem para o Brasil por ano
         </h3>
-        <img class="graficos" src="Midias/gráfico4.png" alt="gráfico" />
+        <img class="imagens" src="Midias/gráfico4.png" alt="gráfico" />
         <h2 class="textos">Sobre nosso trabalho:</h2>
         <p class="textos_info">
           Nós ajudamos os refugiados emigrantes que vem para o Brasil com
