--- a/ScriptsHTML/info.html
+++ b/ScriptsHTML/info.html
@@ -13,14 +13,26 @@
     </header>
     <main>
       <div id="box_main">
+        <h2 class="textos subtitulos">O que somos:</h2>
         <p class="textos_info">
-          Nós somos uma organização que organiza as organizações organizadas pelo
-          organizador das organizações organizadas, e podemos organizar o
+          Nós somos uma organização que organiza as organizações organizadas
+          pelo organizador das organizações organizadas, e podemos organizar o
           organizavel.
         </p>
         <button id="bt_contato" class="botoes botoes_main">
           Entrar em Contato por E-mail
         </button>
+        <h2 class="textos subtitulos">ODSs que buscamos:</h2>
+        <div id="ODSs">
+          <img class="imagens" src="../Midias/ods4.svg" alt="ODS 4" />
+          <img class="imagens" src="../Midias/ods10.svg" alt="ODS 10" />
+          <img class="imagens" src="../Midias/ods16.svg" alt="ODS 16" />
+        </div>
+        <p class="textos_info">
+          ODSs são os 17 objetivos da Organização da Nações Unidas(ONU), que
+          compõem uma agenda mundial para a construção e implementação de
+          políticas públicas que visam guiar a humanidade até 2030.
+        </p>
         <iframe
           class="videos"
           width="685"
